# cortexos

./: .codecov.yml  .dockerignore  .eslintrc.cjs  .gitignore  .gitleaks.toml  .markdownlint.json  .prettierignore  .prettierrc.json  .sops.yaml  9router-fork-archive-20-fork.conf.txt  AGENTS.md  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  CLI_ORCHESTRATOR.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  Makefile  PLAN.md  README.md  REQUIREMENTS.md  SECURITY.md  SETUP.md  Vagrantfile  cortexos.tailfd052e.ts.net.crt  deliverable.md  docker-compose.yml  eslint.config.js  eslint.config.mjs  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.base.json
.agentic/: config.json
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  branch-protection.md  dependabot.yml
.husky/: _pub-nats  pre-commit  pre-push
.planning/: BREAKDOWN.md  GATE-RESOLUTION.md
dashboard/: .dockerignore  .gitignore  Caddyfile.snippet  Dockerfile  README.md  cortex-dashboard.service  dashboard.env.example  deploy.sh  docker-compose.yml  docker-entrypoint.sh  eslint.config.mjs  package-lock.json  package.json  server.ts  vitest.config.ts
docs/: A2A.md  AGENT-GATEWAY.md  AGENT-GRAPH.md  AGENT_FACTORY.md  AI-INSTALLER-PROMPT.md  AI-REPLICATION.md  AI-SETUP.md  APPS.md  ARCHITECT.md  ARCHITECTURE.md  AUDIT.md  BACKUP-AND-AUTO-UPDATE.md  CLI-TOOLS.md  CONFIG.md  CREDENTIALS.md  DASHBOARD.md  DOCKER-GUIDE.md  (+36 more)
stacks/cortex-graph/: Dockerfile  README.md  docker-compose.yml  pyproject.toml
stacks/cortex-graph/app/: __init__.py  auth.py  config.py  envelope.py  graph.py  main.py  nats_bridge.py  runner.py  state.py  telemetry.py
stacks/cortex-graph/app/nodes/: executor.py  human_review.py  planner.py  verifier.py
stacks/cortex-graph/tests/: conftest.py  test_api.py  test_auth.py  test_envelope.py  test_graph.py  test_nodes.py  test_state.py
(+933 files in other folders)
