[project]
name = "cortex-graph"
version = "0.1.0"
description = "CortexOS LangGraph sidecar — resumable agent state with Postgres checkpoints"
readme = "README.md"
requires-python = ">=3.13"
license = { text = "Apache-2.0" }
authors = [{ name = "CortexOS" }]

# Runtime dependencies. Versions track latest stable releases as of 2026-01.
# When upgrading, validate compatibility against the langgraph + postgres
# checkpointer pair — these two move together.
dependencies = [
  "langgraph>=0.4.0",
  "langgraph-checkpoint-postgres>=2.0.0",
  "fastapi>=0.116.0",
  "uvicorn[standard]>=0.32.0",
  "httpx>=0.28.0",
  "pydantic>=2.10.0",
  "pydantic-settings>=2.7.0",
  "nats-py>=2.9.0",
  "jcs>=0.2.1",
  "psycopg[binary,pool]>=3.2.0",
  "opentelemetry-api>=1.30.0",
  "opentelemetry-sdk>=1.30.0",
  "opentelemetry-instrumentation-fastapi>=0.51b0",
  "opentelemetry-instrumentation-httpx>=0.51b0",
  "opentelemetry-exporter-otlp-proto-grpc>=1.30.0",
  "structlog>=24.4.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.0",
  "pytest-asyncio>=0.24.0",
  "pytest-cov>=6.0.0",
  "httpx>=0.28.0",
  "ruff>=0.8.0",
  "mypy>=1.13.0",
]

[build-system]
requires = ["setuptools>=75", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-q --strict-markers"
markers = [
  "integration: requires running Postgres/NATS (opt-in via -m integration)",
]

[tool.coverage.run]
source = ["app"]
branch = true

[tool.coverage.report]
show_missing = true
skip_covered = false
fail_under = 80

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "ASYNC"]
